macros/tests/unhappy/expected_js_name_param_value.test.stderr
error: expected a value for this attribute: `js_name = ...` and it must be a string literal
  --> tests/unhappy/expected_js_name_param_value.test.rs:10:23
   |
10 |         #[wasm_export(js_name)]
   |                       ^^^^^^^
